2003-12-07 MenTaLguY <mental@rydia.net>

	* src/widgets/button.c: fixed unsignedness warning

2003-12-06  bulia byak <bulia@dr.com>

	* src/dialogs/align.c: tooltip fix (from sodipodi)

	* src/libnr/nr-stroke.c: fix for 853827, rendering of short paths (from sodipodi)

	* src/sp-text.c src/sp-text.h src/text-context.c: enabled home/end in text (from sodipodi)

	* src/document-undo.c: increased MAX_UNDO to 512

	* src/file.c src/dialogs/export.c: fix for 851012: the smallest possible exported png
	is now 1x1

	* src/widgets/font-selector.c: fix for 851789: no exponential display in font size field

2003-12-06 MenTaLguY <mental@rydia.net>

	* src/desktop.c: permit the canvas widget to take keyboard focus

	* src/widgets/button.c, src/widgets/button.h: reworked perform
	  callback as separate callback, so we can use
	  g_signal_handlers_{un,}block...() on it rather than the stupid
	  semaphore counter thing I had originally.

	  Also switched to sp_icon_new() instead of sp_icon_new_scaled(), as
	  otherwise the small icons were too small (but the large icons are
	  now smaller than they could be... darn it... ><)

2003-12-05 Bryce W. Harrington <brycehar@bryceharrington.com>

	* style.*, sp-path.*, sp-shape.*, more:  Hooking up preliminary
	  support for path markers (arrowheads).  Also adding
	  documentation, fixing if statement style, etc.
	
2003-12-05 MenTaLguY <mental@rydia.net>

	* src/widgets/icon.c, src/widgets/button.c, src/widgets/button.h, src/toolbox.c:
	  Reworked SPButton to derive from GtkToggleButton.

	* src/svg/svg-length.c, src/helper/units.c: removed #ifdef WIN32 insanity

	* src/Makefile.am, src/extension.c,
	  src/extension.h, src/extensions-skeleton.h,
	  src/main.c, src/inkscape.c, src/toolbox.c: Removed dead code left
	  over from first extensions implementation

	* configure.in, src/main.c: removed freebsd-specific test and just check for fpsetmask() instead

	* src/verbs.c: fixed quit icon

2003-12-04  bulia byak <bulia@dr.com>
